--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
+aiohttp==3.7.4.post0
 alabaster==0.7.12
+async-timeout==3.0.1
+attrs==21.2.0
 autodoc==0.5.0
 autodock==0.0.2
 Babel==2.9.0
 beautifulsoup4==4.9.3
+bidict==0.21.2
 bleach==3.3.0
 build==0.3.1.post1
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 circuits==3.2.1
+click==8.0.0
 colorama==0.4.4
 commonmark==0.9.1
 cryptography==3.4.6
@@ -17,23 +22,30 @@ decorator==4.4.2
 docker-py==1.10.6
 docker-pycreds==0.4.0
 docutils==0.16
+evdev==1.4.0
+Flask==2.0.0
+Flask-SocketIO==5.0.1
 idna==2.10
 imagesize==1.2.0
 importlib-metadata==3.7.3
+itsdangerous==2.0.0
 jeepney==0.6.0
-Jinja2==2.11.3
+Jinja2==3.0.0
 jsonrpc-requests==0.4.0
 keyring==23.0.0
 kiwisolver==1.3.1
+KuCoin==0.1
+kucoin-python==1.0.7
 livereload==2.6.3
 lxml==4.6.2
 m2r==0.2.1
-MarkupSafe==1.1.1
+MarkupSafe==2.0.0
 matplotlib==3.3.4
 mistune==0.8.4
 mock==4.0.3
 mpl-finance==0.10.1
 mplfinance==0.12.7a10
+multidict==5.1.0
 numpy==1.20.1
 packaging==20.9
 pandas==1.2.3
@@ -43,8 +55,12 @@ Pillow==8.1.2
 pkginfo==1.7.0
 pycparser==2.20
 Pygments==2.8.1
+pynput==1.7.3
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-engineio==4.1.0
+python-socketio==5.2.1
+python-xlib==0.29
 pytz==2021.1
 readme-renderer==29.0
 recommonmark==0.7.1
@@ -69,10 +85,14 @@ toml==0.10.2
 tornado==6.1
 tqdm==4.59.0
 twine==3.4.0
+typing-extensions==3.10.0.0
 urllib3==1.26.4
 waitress==2.0.0
 webencodings==0.5.1
 WebOb==1.8.7
 websocket-client==0.58.0
+websockets==9.0.1
 WebTest==2.0.35
+Werkzeug==2.0.0
+yarl==1.6.3
 zipp==3.4.1
